--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -307,13 +307,15 @@
         z-index: 2;
         display: inline-block;
         padding: unit(8px / @font-size, em) unit(20px / @font-size, em);
+        border-left: 1px solid @gray-50;
+        border-right: 1px solid @gray-50;
         background: @white;
     }
 
     &_ribbon {
         position: relative;
         display: inline-block;
-        width: 12px;
+        width: unit(12px / @font-size, em);
         padding: unit(8px / @font-size, em) 0;
         background-repeat: no-repeat;
 
@@ -328,33 +330,36 @@
                 background: @white;
         }
 
+        // Eyeballed based on the skew angle
+        @offset: unit(5px / @font-size, em);
+
         &__left {
-            margin-right: unit(-4px / @font-size, em);
+            margin-right: unit(-5px / @font-size, em);
             &:before {
                 top: 0;
                 border-left: 1px solid @gray-50;
-                transform:  skewX(33deg) translateX(5px);
+                transform:  skewX(33deg) translateX(@offset);
             }
             &:after {
                 bottom: 0;
                 border-left: 1px solid @gray-50;
-                transform:  skewX(-33deg) translateX(5px);
+                transform:  skewX(-33deg) translateX(@offset);
             }
         }
 
         &__right {
-            margin-left: unit(-4px / @font-size, em);
+            margin-left: unit(-5px / @font-size, em);
             &:before {
                 top: 0;
                 right: 0;
                 border-right: 1px solid @gray-50;
-                transform:  skewX(-33deg) translateX(-5px);
+                transform:  skewX(-33deg) translateX(-@offset);
             }
             &:after {
                 right: 0;
                 bottom: 0;
                 border-right: 1px solid @gray-50;
-                transform:  skewX(33deg) translateX(-5px);
+                transform:  skewX(33deg) translateX(-@offset);
             }
         }
     }
