IE fix for fancy ribbon.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7381,6 +7381,10 @@ a.category-slug.active {
   background-repeat: no-repeat;
 }
 
+.fancy-slug_ribbon .lt-ie8 {
+  display: none;
+}
+
 .fancy-slug_ribbon:before,
 .fancy-slug_ribbon:after {
   content: "";
