--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -319,6 +319,10 @@
         padding: unit(8px / @font-size, em) 0;
         background-repeat: no-repeat;
 
+        .lt-ie8 {
+            display: none;
+        }
+
         &:before,
         &:after {
                 content: "";
