IE fix for fancy ribbon.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6493,7 +6493,7 @@ a.category-slug.active {
   padding: 0.57142857em 0;
   background-repeat: no-repeat;
 }
-.fancy-slug_ribbon .lt-ie8 {
+.lt-ie8 .fancy-slug_ribbon {
   display: none;
 }
 .fancy-slug_ribbon:before,
