--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -319,7 +319,7 @@
         padding: unit(8px / @font-size, em) 0;
         background-repeat: no-repeat;
 
-        .lt-ie8 {
+        .lt-ie8 & {
             display: none;
         }
 
