--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7381,7 +7381,7 @@ a.category-slug.active {
   background-repeat: no-repeat;
 }
 
-.fancy-slug_ribbon .lt-ie8 {
+.lt-ie8 .fancy-slug_ribbon {
   display: none;
 }
 
