IE fix for fancy ribbon.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7378,7 +7378,7 @@ a.category-slug.active {
   border: 1px solid #babbbd;
 }
 
-.lt-ie8 .fancy-slug_inner {
+.lt-ie8 .fancy-slug_text {
   border: none;
 }
 
