--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -317,7 +317,7 @@
             display: block;
             border: 1px solid @gray-50;
         }
-        .lt-ie8 &_inner {
+        .lt-ie8 &_text {
             border: none;
         }
         .lt-ie8 &_ribbon {
