--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6490,7 +6490,7 @@ a.category-slug.active {
   display: block;
   border: 1px solid #babbbd;
 }
-.lt-ie8 .fancy-slug_inner {
+.lt-ie8 .fancy-slug_text {
   border: none;
 }
 .lt-ie8 .fancy-slug_ribbon {
