--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7375,11 +7375,8 @@ a.category-slug.active {
 
 .lt-ie8 .fancy-slug_inner {
   display: block;
-  border: 1px solid #babbbd;
-}
-
-.lt-ie8 .fancy-slug_text {
-  border: none;
+  border-top: none;
+  border-bottom: 1px solid #babbbd;
 }
 
 .lt-ie8 .fancy-slug_ribbon {
