--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -315,10 +315,8 @@
     & {
         .lt-ie8 &_inner {
             display: block;
-            border: 1px solid @gray-50;
-        }
-        .lt-ie8 &_text {
-            border: none;
+            border-top: none;
+            border-bottom: 1px solid @gray-50;
         }
         .lt-ie8 &_ribbon {
             display: none;
