IE fix for fancy ribbon.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6491,6 +6491,9 @@ a.category-slug.active {
   border-top: none;
   border-bottom: 1px solid #babbbd;
 }
+.lt-ie8 .fancy-slug_text {
+  border-top: 1px solid #babbbd;
+}
 .lt-ie8 .fancy-slug_ribbon {
   display: none;
 }
