--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7379,6 +7379,10 @@ a.category-slug.active {
   border-bottom: 1px solid #babbbd;
 }
 
+.lt-ie8 .fancy-slug_text {
+  border-top: 1px solid #babbbd;
+}
+
 .lt-ie8 .fancy-slug_ribbon {
   display: none;
 }
