--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -318,6 +318,9 @@
             border-top: none;
             border-bottom: 1px solid @gray-50;
         }
+        .lt-ie8 &_text {
+            border-top: 1px solid @gray-50;
+        }
         .lt-ie8 &_ribbon {
             display: none;
         }
