IE fix for fancy ribbon.

--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -319,7 +319,8 @@
             border-bottom: 1px solid @gray-50;
         }
         .lt-ie8 &_text {
-            border-top: 1px solid @gray-50;
+            margin-bottom: unit((@font-size / 2) / @font-size, em);
+            border: 1px solid @gray-50;
         }
         .lt-ie8 &_ribbon {
             display: none;
