--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6492,7 +6492,8 @@ a.category-slug.active {
   border-bottom: 1px solid #babbbd;
 }
 .lt-ie8 .fancy-slug_text {
-  border-top: 1px solid #babbbd;
+  margin-bottom: 0.5em;
+  border: 1px solid #babbbd;
 }
 .lt-ie8 .fancy-slug_ribbon {
   display: none;
