--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7380,7 +7380,8 @@ a.category-slug.active {
 }
 
 .lt-ie8 .fancy-slug_text {
-  border-top: 1px solid #babbbd;
+  margin-bottom: 0.5em;
+  border: 1px solid #babbbd;
 }
 
 .lt-ie8 .fancy-slug_ribbon {
