--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7340,20 +7340,11 @@ a.category-slug.active {
   line-height: 1;
   margin-bottom: 0.57142857em;
   text-align: center;
+  border-top: 1px solid #babbbd;
 }
 
 .lt-ie9 .fancy-slug {
   font-weight: normal !important;
-}
-
-.fancy-slug:before {
-  content: "";
-  position: absolute;
-  top: 1.07142857em;
-  right: 0;
-  left: 0;
-  z-index: 1;
-  border-bottom: 1px solid #babbbd;
 }
 
 .fancy-slug_inner {
@@ -7361,6 +7352,7 @@ a.category-slug.active {
   display: inline-block;
   border-top: 1px solid #babbbd;
   border-bottom: 1px solid #babbbd;
+  top: -1.07142857em;
 }
 
 .fancy-slug_text {
@@ -7380,7 +7372,6 @@ a.category-slug.active {
 }
 
 .lt-ie8 .fancy-slug_text {
-  margin-bottom: 0.5em;
   border: 1px solid #babbbd;
 }
 
