--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -278,55 +278,56 @@
 */
 
 .fancy-slug {
+    @v-padding: 8px;
+
     .h5();
     position: relative;
     line-height: 1;
+    // Create a space for the text to pull itself up into.
+    margin-top: unit(((@font-size / 2) + @v-padding + 1) / @font-size, em);
     // Bottom margin is eyeballed to 15px when considering baseline and line-height.
     margin-bottom: unit(8px / @font-size, em);
     text-align: center;
 
     border-top: 1px solid @gray-50;
 
-    // &:before {
-    //     content: "";
-    //     position: absolute;
-    //     top: unit(((@font-size / 2) + 8) / @font-size, em);
-    //     right: 0;
-    //     left: 0;
-    //     z-index: 1;
-    // }
-
     &_inner {
-        position: relative;
         display: inline-block;
+        position: relative;
+        // Pull the text up up by half of its height so that it is vertically
+        // centered with .fancy-slugs top border.
+        top: unit(((@font-size / 2) + @v-padding + 1) * -1 / @font-size, em);
         border-top: 1px solid @gray-50;
         border-bottom: 1px solid @gray-50;
-
-        top: unit(((@font-size / 2) + 8) * -1 / @font-size, em);
     }
 
     &_text {
         position: relative;
         z-index: 2;
         display: inline-block;
-        padding: unit(8px / @font-size, em) unit(20px / @font-size, em);
+        padding: unit(@v-padding / @font-size, em) unit(20px / @font-size, em);
         border-left: 1px solid @gray-50;
         border-right: 1px solid @gray-50;
         background: @white;
     }
 
-    & {
-        .lt-ie8 &_ribbon {
-            display: none;
-        }
-    }
+    @angle: 33deg;
+    // After skewing the pseudo element we need to align it with the top
+    // border. This number will need to change if changing the angle. This
+    // value is eyeballed.
+    @offset: unit(5px / @font-size, em);
 
-    &_ribbon {
+    // Use :before as the top corner and :after as the bottom corner.
+    &_ribbon-left,
+    &_ribbon-right {
         position: relative;
         display: inline-block;
         width: unit(12px / @font-size, em);
-        padding: unit(8px / @font-size, em) 0;
-        background-repeat: no-repeat;
+        padding: unit(@v-padding / @font-size, em) 0;
+
+        .lt-ie9 & {
+            display: none;
+        }
 
         &:before,
         &:after {
@@ -337,39 +338,37 @@
                 width: 12px;
                 height: 50%;
                 background: @white;
+                border: 0 solid @gray-50;
         }
+    }
 
-        // Eyeballed based on the skew angle
-        @offset: unit(5px / @font-size, em);
-
-        &__left {
-            margin-right: unit(-5px / @font-size, em);
-            &:before {
-                top: 0;
-                border-left: 1px solid @gray-50;
-                transform:  skewX(33deg) translateX(@offset);
-            }
-            &:after {
-                bottom: 0;
-                border-left: 1px solid @gray-50;
-                transform:  skewX(-33deg) translateX(@offset);
-            }
+    &_ribbon-left {
+        margin-right: unit(-5px / @font-size, em);
+        &:before {
+            top: 0;
+            border-left-width: 1px;
+            transform:  skewX(@angle) translateX(@offset);
         }
+        &:after {
+            bottom: 0;
+            border-left-width: 1px;
+            transform:  skewX(-@angle) translateX(@offset);
+        }
+    }
 
-        &__right {
-            margin-left: unit(-5px / @font-size, em);
-            &:before {
-                top: 0;
-                right: 0;
-                border-right: 1px solid @gray-50;
-                transform:  skewX(-33deg) translateX(-@offset);
-            }
-            &:after {
-                right: 0;
-                bottom: 0;
-                border-right: 1px solid @gray-50;
-                transform:  skewX(33deg) translateX(-@offset);
-            }
+    &_ribbon-right {
+        margin-left: unit(-5px / @font-size, em);
+        &:before {
+            top: 0;
+            right: 0;
+            border-right-width: 1px;
+            transform:  skewX(-@angle) translateX(-@offset);
+        }
+        &:after {
+            right: 0;
+            bottom: 0;
+            border-right-width: 1px;
+            transform:  skewX(@angle) translateX(-@offset);
         }
     }
 }
