Change expandable link to a button.

--- a/_layouts/post-filters.html
+++ b/_layouts/post-filters.html
@@ -2,8 +2,7 @@
 <div class="expandable">
     <div class="expandable_header expandable_header__spaced">
         <div class="expandable_header-right expandable_header-right__float-on-medium">
-            <a class="expandable_target btn btn-secondary"
-               href="#post-filters-form">
+            <button class="expandable_target btn btn-secondary">
                 Filter posts
                 <span class="expandable_cue-open">
                     <span class="btn-icon-right cf-icon cf-icon-down"></span>
@@ -11,7 +10,7 @@
                 <span class="expandable_cue-close">
                     <span class="btn-icon-right cf-icon cf-icon-up"></span>
                 </span>
-            </a>
+            </button>
         </div>
     {% if active_filters_total > 0 %}
         <dl class="filtered-by filtered-by__show-on-medium filtered-by__align-with-btn list list__horizontal">
