--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -9886,6 +9886,33 @@ a.focus .summary_header {
           -----------------------
           .summary_cols
             .summary_col
+    - name: Skinny column modifier
+      markup: |
+        <article class="summary">
+            <h1 class="summary_header">
+                Preventing illegal discrimination in auto lending
+            </h1>
+            <div class="summary_cols">
+                <div class="summary_col summary_col__skinny">
+                    <p class="summary_text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde hic
+                        praesentium eum eveniet accusamus ad provident neque. Earum numquam
+                        tenetur voluptates adipisci expedita reiciendis libero fuga non quas
+                        voluptatem nihil.
+                    </p>
+                </div>
+                <div class="summary_col">
+                    <ul>
+                        <li>List item</li>
+                        <li>List item</li>
+                        <li>List item</li>
+                        <li>List item</li>
+                    </ul>
+                </div>
+            </div>
+        </article>
+      codenotes:
+        - .summary_col__skinny
   tags:
     - cfgov-summary
 */
